--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,6 +6,8 @@
 @import './css/typography.css';
 @import './css/color-iconography.css';
 @import './css/modal.css';
+@import './stylebox-inputbox.css';
+@import './colors.css';
 
 
 #app {
