--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,11 +5,47 @@
 @import './css/color-iconography.css';
 @import './css/modal.css';
 
-
 @font-face {
   font-family: 'Poppins';
   src: url(../assets/font_styles/Poppins-Regular.ttf) format(truetype); 
   font-weight: normal;
   font-style: normal;
-
 }
+
+@font-face {
+  font-family: 'Roboto';
+  src: url(../assets/font_styles/Roboto-Regular.ttf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto-black';
+  src: url(../assets/font_styles/Roboto-Black.ttf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gotham';
+  src: url(../assets/font_styles/Gotham-Medium.otf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url(../assets/font_styles/Inter-Regular.ttf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gotham-light';
+  src: url(../assets/font_styles/Gotham-Light.otf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
