--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -1,19 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 .container5{
     flex-direction: column;
     align-items: flex-start;
     padding: 10px 0px;
     gap: 40px;
-    
     position: relative;
     width: 707px;
     height: 1211px;
-    
-    background: #FFFFFF var(--vt-c-black);
+    background: #FFFFFF;
     border: 1px solid #000000;
     border-radius: 4px;
     border-color: var(--vt-c-black);             
-
 }
 
 .inter{
@@ -29,7 +25,7 @@
 .h1{
     font-family: 'Gotham', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 900;
     font-size: 32px;
     line-height: 35px;
     display: flex;
@@ -55,7 +51,7 @@
     align-items: center;
 }
 
-.font-style-gotham-h{
+.font-style-inter{
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     line-height: 24px;
@@ -64,6 +60,29 @@
     color: #000000;
     border-color: var(--vt-c-black);             
 }
+
+.body{
+    font-family: 'Gotham-light', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 15px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+    border-color: var(--vt-c-black);             
+}
+
+.body2{
+    font-family: 'Gotham-light', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 13px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+    border-color: var(--vt-c-black);             
+}
+
 /* .Roboto */
 .roboto-headings{
     font-family: 'Roboto', sans-serif;
@@ -75,9 +94,8 @@
     align-items: center;    
 }
 .heading1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto-black', sans-serif;
     font-style: normal;
-    font-weight: 700;
     font-size: 32px;
     line-height: 24px;
     display: flex;
@@ -124,16 +142,17 @@
 }
 .heading5{
     font-family: 'Roboto', sans-serif;  
-    font-weight: 700;
     font-size: 14px;
+    font-weight: 700;
     line-height: 16px;
     display: flex;
     align-items: center;
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black); 
 }
 
 .font-style-roboto-p1{
+    font-family: 'Roboto', sans-serif;  
     font-size: 16px;
     line-height: 19px;
     display: flex;
@@ -143,6 +162,7 @@
 }
 
 .font-style-roboto-p2{
+    font-family: 'Roboto', sans-serif;  
     font-size: 14px;
     line-height: 16px;
     display: flex;
