acc-manager-changes

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,8 @@
 @import './css/color-iconography.css';
 @import './css/modal.css';
 @import './css/components-button.css';
+@import './css/tables.css';
+@import './css/accmanager.css';
 
 
 #app {
