--- a/src/assets/css/color-iconography.css
+++ b/src/assets/css/color-iconography.css
@@ -3,7 +3,14 @@
     height: 573px
 }
 
-.color{
+.colors-font{
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    color: #000000;
+    margin-left: 15px;
+    margin-top: 15px;
+}
+.colors{
     font-style: normal;
     font-weight: 600;
     font-size: 24px;
@@ -130,18 +137,19 @@
     border-color: var(--vt-c-valencia);           
 }
 
-.m-2{
-    font-weight: 600;
-    font-size: 16px;
-    color: #000000;
-    align-items: center;
+.icon-size{
+    font-size: 24px;
+    margin-left: 15px;
+    margin-top: 15px;
 }
 
-.m-1{
+.icon1{
     font-weight: 600;
-    font-size: 24px;
+    font-size: 70px;
     color: #000000;
+    margin-left: 15px;
 }
+
 
 /* icon colors */
 .violet{
