--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -55,6 +55,8 @@
   --vt-c-venitian-red:#CC1512;
   --vt-c-sea-green:#219050;
   --vt-c-gray:#cccccc;
+  --vt-c-lavender-bush: #FFF5F5;
+  --vt-c-english-vermillion:#D4514D;
   /* colors */
 
   /* sizes  */
