--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -1,5 +1,13 @@
+.container-accmanager-size{
+  width: 1412px;
+  height:846px ;
+  
+}
 .p-20px{
     padding: var(--c-size-20px);
+}
+.p-10px{
+    padding: var(--c-size-10px);
 }
 .p-header-20px{
     padding-top: var(--c-size-20px);
@@ -20,19 +28,19 @@
     margin: none !important;
 }
 .margin-orgid{
-    margin-left: 8.125rem;
+    margin-left: 6.875rem;
 }
 .margin-emailaddress{
-    margin-left: 13.75rem;
+    margin-left: 11.5625rem;
 }
 .margin-organization{
-    margin-left:10.625rem;
+    margin-left:8.75rem;
 }
 .margin-contact{
-    margin-left:2.813rem;
+    margin-left:9.0625rem;
 }
 .margin-tin{
-    margin-left: 8.438rem;
+    margin-left: 6.5625rem;
 }
 
 /* dropdown */
@@ -43,14 +51,40 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
+    background: #FFFFFF;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
     z-index: 1;
+    border-radius: 16px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
-  
   .dropdown:hover .dropdown-content {
-    display: block;
+    display: inline;
   }
+  .dropdown-content-position{
+    position:absolute;
+    top:18px;
+    right:0px;
+  }
+  .dropdown-content-size{
+    width: 170px;
+    height: 40px;
+    padding: var(--c-size-10px);
+  }
+  .dropdown-content-font{
+    font-family: 'Gotham';
+    font-style: normal;
+    color: var(--vt-c-dark-gray);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    display: flex;
+    align-items: center;
+  }
+  .dropdown-content-hover:hover{
+    background: #C6C7F9;
+    color: var(--vt-c-white);
+  }
+
+  
 /* dropdown */
