--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -5,11 +5,11 @@
     border-radius: 8px;
     background: #FFFFFF;
     border-radius: 16px;
-    border-color: var(--vt-c-white);          
+    border-color: var(--vt-c-white);  
 }
 
 .font-style-roboto{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto-black', sans-serif;
     font-weight: 900;
     font-size: 32px;
     line-height: 38px;    
@@ -46,7 +46,9 @@
     font-size: 24px;
     line-height: 29px;
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black);  
+    padding-top: 20px;  
+    margin-left: 10px;
 }
 
 .modal1{
@@ -60,6 +62,7 @@
     border-style: none;
     box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
     border-radius: 4px;
+
 }
 
 .alert-font{
@@ -79,7 +82,10 @@
     border: 1px solid #DB524E;    
     box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
     border-radius: 4px;
-    border-color: var(--vt-c-valencia);           
+    border-color: var(--vt-c-valencia);
+    margin-left: 10px;  
+    margin-right: 10px;
+             
 }
 
 .modal2{
@@ -87,9 +93,14 @@
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 19px;    
+    line-height: 19px;  
+    align-self: stretch;  
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black);  
+    display: flex;
+    margin-top: 10px;
+    padding-left: 10px
+
 }
 
 /* cont2 */
@@ -129,7 +140,8 @@
     font-size: 16px;
     line-height: 19px;    
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black);
+    margin-left: 5px;             
 }
 
 /* container 4 */
@@ -152,6 +164,8 @@
     order: 0;
     align-self: stretch;
     flex-grow: 0;
+    margin-top: 5px;
+    margin-left: 10px;
 }
 
 .modal4{
@@ -163,7 +177,8 @@
     font-size: 16px;
     line-height: 19px;    
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black);  
+    margin-left: 10px;           
 }
 
 .button-cancel{
@@ -178,7 +193,6 @@
     font-family: var(--c-font-styles-roboto);
     font-size: var(--c-font-size-16px);
     color: var(--vt-c-indigo);
-    margin-left: var(--c-size-10px);
     margin-right: var(--c-size-10px);
     margin-top: var(--c-size-10px);
     margin-bottom: var(--c-size-10px);
@@ -196,7 +210,6 @@
     font-family: var(--c-font-styles-roboto);
     font-size: var(--c-font-size-16px);
     color: var(--vt-c-white);
-    margin-left: var(--c-size-10px);
     margin-right: var(--c-size-10px);
     margin-top: var(--c-size-10px);
     margin-bottom: var(--c-size-10px);
@@ -210,14 +223,12 @@
     font-family: var(--c-font-styles-roboto);
     font-size: var(--c-font-size-16px);
     color: var(--vt-c-white);
-    padding-left: var(--c-size-20px);
-    padding-right: var(--c-size-20px);
     padding-top: var(--c-size-10px);
-    padding-bottom: var(--c-size-10px);
-    margin-left: var(--c-size-10px);
-    margin-right: var(--c-size-10px);
+    padding-bottom: var(--c-size-15px);
+    margin-left: var(--c-size-20px);
     margin-top: var(--c-size-10px);
-    margin-bottom: var(--c-size-10px);
+    display: flex;
+flex-direction: column;
 }
   
 .icon-x{
@@ -248,9 +259,11 @@
     border-color: var(--vt-c-indigo);
     font-family: var(--c-font-styles-roboto);
     font-size: var(--c-font-size-16px);
-    color: var(--vt-c-white);
-    margin-left: var(--c-size-10px);
-    margin-right: var(--c-size-20px);
-    margin-top: none;
-    margin-bottom: var(--c-size-10px);
+    color: var(--vt-c-white);    
+}
+
+.icon-calendar{
+    font-size: 20px;
+    margin-top: 10px;
+
 }
