--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -3,16 +3,15 @@
     align-items: flex-start;
     padding: 10px 0px;
     gap: 40px;
-    
     position: relative;
     width: 707px;
     height: 1211px;
     background: #FFFFFF;
     border: 1px solid #000000;
     border-radius: 4px;
-    border-color: var(--vt-c-black);             
+           
 }
-
+/* gotham */
 .inter{
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -20,10 +19,10 @@
     font-size: 24px;
     line-height: 29px;
     display: flex;
-    align-items: center; 
+    align-items: center;
 
 }
-.h1{
+.fontfamily-gotham-heading-1{
     font-family: 'Gotham', sans-serif;
     font-style: normal;
     font-weight: 900;
@@ -33,7 +32,7 @@
     align-items: center;
 }
 
-.h2{
+.fontfamily-gotham-heading-2{
     font-family: 'Gotham', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -42,7 +41,7 @@
     display: flex;
     align-items: center;
 }
-.h3{
+.fontfamily-gotham-heading-3{
     font-family: 'Gotham', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -59,7 +58,9 @@
     display: flex;
     align-items: center;
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black);    
+    padding-left: 20px; 
+    padding-right: 20px;
 }
 
 .body{
@@ -92,8 +93,9 @@
     font-size: 24px;
     line-height: 28px;
     display: flex;
-    align-items: center;    
+    align-items: center;  
 }
+
 .heading1 {
     font-family: 'Roboto-black', sans-serif;
     font-style: normal;
@@ -109,7 +111,9 @@
     display: flex;
     align-items: center;
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black);    
+    padding-left: 20px; 
+    padding-right: 20px;         
 }
 
 .heading2{
@@ -190,5 +194,7 @@
     font-size: 20px;
     align-items: center;
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black);   
+    padding-left: 20px; 
+    padding-right: 20px;          
 }
