--- a/src/assets/css/bootstrap/bootstrap.css
+++ b/src/assets/css/bootstrap/bootstrap.css
@@ -7232,7 +7232,12 @@ textarea.form-control-lg {
 }
 
 .border-top-1{
-  border-bottom: 3px solid;
+  border-top: 1px solid;
+}
+
+.border-top{
+  border-top: 3px solid;
+
 }
 .border-start {
   border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
