--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -50,3 +50,18 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Inter-ExtraBold';
+  src: url(../assets/font_styles/Inter-ExtraBold.ttf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Poppins-ExtraBold';
+  src: url(../assets/font_styles/Poppins-ExtraBold.ttf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+
