--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -3,9 +3,8 @@
     height: 314px;
     box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
     border-radius: 8px;
-    background: #FFFFFF;
+    background: var(--vt-c-white);  
     border-radius: 16px;
-    border-color: var(--vt-c-white);  
 }
 
 .font-style-roboto{
@@ -15,8 +14,7 @@
     line-height: 38px;    
     align-items: center;
     text-align: center;    
-    color: #000000;
-    border-color: var(--vt-c-black);             
+    color: var(--vt-c-black);
 }
 
 .font-style-gotham{
@@ -26,12 +24,11 @@
     line-height: 15px;
     font-weight: 400;
     display: flex;
-    color: #000000;
+    color: var(--vt-c-black);             
     flex: none;
     order: 1;
     align-self: stretch;
-    flex-grow: 0;
-    border-color: var(--vt-c-black);             
+    flex-grow: 0;            
 }
 
 .info2{
@@ -45,8 +42,7 @@
     font-size: 24px;
     font-size: 24px;
     line-height: 29px;
-    color: #000000;
-    border-color: var(--vt-c-black);  
+    color: var(--vt-c-black);  
     padding-top: 20px;  
     margin-left: 10px;
 }
@@ -84,8 +80,7 @@
     border-radius: 4px;
     border-color: var(--vt-c-valencia);
     margin-left: 10px;  
-    margin-right: 10px;
-             
+    margin-right: 10px;     
 }
 
 .modal2{
@@ -95,23 +90,21 @@
     font-size: 16px;
     line-height: 19px;  
     align-self: stretch;  
-    color: #000000;
-    border-color: var(--vt-c-black);  
+    color: var(--vt-c-black); 
     display: flex;
     margin-top: 10px;
     padding-left: 10px
-
 }
 
 /* cont2 */
 .con2{
     width: 496px;
     height: 294px;
-    background: #FFFFFF;
+    background: var(--vt-c-white);    
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
-    border-color: var(--vt-c-white);          
 }
+
 .form-select{
     font-family: 'Roboto', sans-serif;
     box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
@@ -120,19 +113,18 @@
     font-size: 16px;
     line-height: 24px;
     align-items: center;
-    color: #111111;
-    border-color: var(--vt-c-black);             
+    color: var(--vt-c-black); 
 }
 
 /* container 3 */
 .con3{
     width: 496px;
     height: 259px;
-    background: #FFFFFF;
+    background: var(--vt-c-white);  
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
-    border-color: var(--vt-c-white-smoke);
 }
+
 .modal3{
     font-family: 'Gotham-light', sans-serif;
     font-style: normal;
@@ -181,59 +173,7 @@
     margin-left: 10px;           
 }
   
-.icon-x{
-    border-radius: 50% !important;
-    background-color: var(--vt-c-indigo);
-    border-style: solid;
-    border-color: var(--vt-c-indigo);
-    font-size: var(--c-size-24px);
-    color: var(--vt-c-white);
-    width: 44px;
-    height: 44px;
-    margin-left: var(--c-size-10px);
-    margin-right: var(--c-size-10px);
-    margin-top: var(--c-size-10px);
-    margin-bottom: var(--c-size-10px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .icon-calendar{
     font-size: 20px;
 }
 
-  
- /* ModalsAlerts/ con4 */
- .component-button-round-indigo-none-indigo-nofont-fontsize24px-white-mx20-my-10{
-    border-radius: 50% !important;
-    background-color: var(--vt-c-indigo);
-    border-style: solid;
-    border-color: var(--vt-c-indigo);
-    font-size: var(--c-size-24px);
-    color: var(--vt-c-white);
-    width: 50px;
-    height: 24px;
-    margin-left: var(--c-size-10px);
-    margin-right: var(--c-size-10px);
-    margin-top: var(--c-size-10px);
-    margin-bottom: var(--c-size-10px);
-}
-  
- /* ModalsAlerts/ con4 */
- .component-button-round-indigo-none-indigo-nofont-fontsize24px-white-mx20-my-10{
-    border-radius: 50% !important;
-    background-color: var(--vt-c-indigo);
-    border-style: solid;
-    border-color: var(--vt-c-indigo);
-    font-size: var(--c-size-24px);
-    color: var(--vt-c-white);
-    width: 50px;
-    height: 24px;
-    margin-left: var(--c-size-10px);
-    margin-right: var(--c-size-10px);
-    margin-top: var(--c-size-10px);
-    margin-bottom: var(--c-size-10px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
