--- a/src/assets/css/transform.css
+++ b/src/assets/css/transform.css
@@ -2,6 +2,7 @@
 .square-colors-size{
     height: 4.813rem;
     width: 4.813rem;
+    border-radius: 4px;
   }
   .size-inputbox{
     height: 3.5rem !important;
