Table/Component/InputFied QA Update

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -69,6 +69,7 @@
   --c-size-11px:0.688rem;
   --c-size-12px:0.75rem;
   --c-size-13px:0.813rem;
+  --c-size-14px:0.875rem;
   --c-size-15px:0.938rem;
   --c-size-16px:1rem;
   --c-size-20px:1.25rem;
