--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -68,6 +68,9 @@
   /* bg Colors  */
 
   /* font Colors */
+  .color-black{
+    color: var(--vt-c-black);
+  }
   .color-indigo{
     color: var(--vt-c-indigo);
   }
