Components/Tables update

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -64,6 +64,7 @@
   --c-size-2px:0.125rem;
   --c-size-4px:0.25rem;
   --c-size-5px:0.313rem;
+  --c-size-6px:0.375rem;
   --c-size-7px:0.438rem;
   --c-size-10px:0.625rem;
   --c-size-11px:0.688rem;
