--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -190,7 +190,7 @@
     border-color: var(--vt-c-indigo);
   }
   .border-color-none{
-    border-style: none;
+    border-style: none !important;
   }
   
   /* border Colors */
