--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -24,7 +24,7 @@
     width: var(--c-size-44px);
     height: var(--c-size-44px);
     margin-left: var(--c-size-10px);
-    margin-right: var(--c-size-10px);
+    margin-right: var(--c-size-12px);
     margin-top: var(--c-size-10px);
     margin-bottom: var(--c-size-10px);
     display: flex;
@@ -85,7 +85,7 @@
     line-height: var(--c-size-15px);
     text-align: center;
     padding-top: var(--c-size-5px);
-    /* padding-bottom: var(--c-size-11px); */
+    padding-bottom: var(--c-size-10px);
     margin-left: var(--c-size-10px);
     margin-right: var(--c-size-10px);
     margin-top: var(--c-size-10px);
@@ -94,10 +94,9 @@
   .badge-pill{
     border-radius: var(--bs-border-radius-pill);
     font-family: 'Roboto';
-    font-weight: 400;
+    font-style: normal;
     font-size: var(--c-size-13px);
     font-weight: 700;
-    font-style: normal;
     line-height: var(--c-size-15px);
     text-align: center;
     padding-top: var(--c-size-7px);
@@ -138,8 +137,8 @@
 input[type="checkbox"].toggle{
   opacity: 0;
   position:absolute;
-  left: -9000px;
-  top: -9000px;
+  /* left: -9000px;
+  top: -9000px; */
 }
 input[type="checkbox"].toggle + label{
   position: relative;
