--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -146,6 +146,7 @@
 .heading3{
     font-family: 'Roboto', sans-serif;  
     font-size: 16px;
+    font-weight:400;
     line-height: 19px;
     display: flex;
     align-items: center;
@@ -222,3 +223,10 @@
     font-weight: bold;
 }
 
+.inputbox-font{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
