--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -117,6 +117,9 @@
     font-size: var(--c-size-24px);
     font-weight: bold;
   }
+  .icon-bold{
+    font-weight: 900;
+  }
   .icon-close-center{
     position: relative;
     left:0px;
