--- a/src/assets/css/transform.css
+++ b/src/assets/css/transform.css
@@ -49,6 +49,7 @@
     height: 66rem; 
     width: 60rem;
   }
+  
   .size-icon{
     font-size: 1rem !important;
   }
@@ -90,6 +91,21 @@
     font-size: var(--c-size-24px);
     font-weight: bolder;
   }
+  /* containers  */
+  .size-color-container{
+    width: 417px !important;
+  height: 573px !important;
+  }
+  .size-icon-container{
+    width: 417px !important;
+    height: 803px !important;
+  }
+  .size-modal-container{
+    flex-direction: column;
+  align-items: flex-start;
+  padding: 29px 25px;
+  }
+  /* containers  */
  
 /* custom-sizes  */
 
