--- a/src/assets/css/licensekey-issue.css
+++ b/src/assets/css/licensekey-issue.css
@@ -37,6 +37,21 @@
     margin-top: 20px;
 }
 
+/* .form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-clip: padding-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.375rem;
+  } */
+
 .license-header{
     font-family: 'Roboto-black', sans-serif;  
     font-weight: 900;
