--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -230,3 +230,10 @@
     font-size: 16px;
     line-height: 24px;
 }
+.button-fonts{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
