--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -66,6 +66,7 @@
   --c-size-5px:0.313rem;
   --c-size-6px:0.375rem;
   --c-size-7px:0.438rem;
+  --c-size-8px:0.5rem;
   --c-size-10px:0.625rem;
   --c-size-11px:0.688rem;
   --c-size-12px:0.75rem;
