--- a/src/assets/css/color-iconography.css
+++ b/src/assets/css/color-iconography.css
@@ -76,7 +76,14 @@
     border-color: var(--vt-c-dim-gray);
 }
 
+
 .icon-size-svg{
     width: 24px;
     height: 24px;
+}
+.font-size-24px{
+    font-size:var(--c-size-24px);
+}
+.font-size-12px{
+    font-size:var(--c-size-12px);
 }
