--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -12,6 +12,9 @@
     margin-right: var(--c-size-10px);
     margin-top: var(--c-size-10px);
     margin-bottom: var(--c-size-10px);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
   }
   .button-default-margin-none{
     margin-top: 0px !important;
@@ -48,6 +51,10 @@
     border-radius: var(--c-size-4px);
     font-family: var(--c-font-styles-roboto);
     font-size: var(--c-font-size-16px);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
   }
   .button-tab{
     color: var(--vt-c-dark-gray);
