--- a/src/assets/css/marginsnpaddings.css
+++ b/src/assets/css/marginsnpaddings.css
@@ -23,6 +23,12 @@
   }
 /* margin-start  */
 /* margin-end  */
+.me-4px{
+  margin-right: var(--c-size-4px);
+}
+.me-8px{
+  margin-right: var(--c-size-8px);
+}
 .me-20px{
     margin-right: 1.25rem !important;
   }
@@ -187,6 +193,11 @@ padding-bottom: 0px !important;
  padding-left: 0px !important;
  padding-right: 0px !important;
 }
-
 /* padding none  */
+/* margin none  */
+.margin-y-none{
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+}
+/* margin none  */
 /* custom-padding  */
