--- a/src/assets/css/licensekey-issue.css
+++ b/src/assets/css/licensekey-issue.css
@@ -5,6 +5,10 @@
     background: var(--vt-c-white); 
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 .icon-x-license{
@@ -68,4 +72,8 @@
     background: var(--vt-c-white);  
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
