--- a/src/assets/css/transform.css
+++ b/src/assets/css/transform.css
@@ -57,8 +57,7 @@
     font-size: 1.5rem !important;
   }
   .size-icon-table-arrow{
-    height: 0.326rem;
-    width: 0.599rem;
+    font-size: 16px;
   }
   .size-table-container{
     width: 86.688rem;
