--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -57,7 +57,7 @@ a{
   
   /* custom-fonts  */
   .font-tablename{
-    font-family: 'Gotham';
+    font-family: 'Gotham-bold';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -69,7 +69,7 @@ a{
     font-size: 14px;
   }
   .font-table-text{
-    font-family: 'Gotham';
+    font-family: 'Gotham-book';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
