--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -43,6 +43,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Gotham-bold';
+  src: url(../assets/Fonts/Gotham-Font/Gotham-Bold.otf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'Inter';
@@ -54,6 +60,12 @@
 @font-face {
   font-family: 'Gotham-light';
   src: url(../assets/font_styles/Gotham-Light.otf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gotham-book';
+  src: url(../assets/Fonts/Gotham-Font/GothamBook.ttf) format(truetype); 
   font-weight: normal;
   font-style: normal;
 }
