--- a/src/assets/css/marginsnpaddings.css
+++ b/src/assets/css/marginsnpaddings.css
@@ -34,8 +34,11 @@
   }
 /* margin-end  */
 /* margin-top  */
-.mt-2px{
-  margin-top: var(--c-size-2px) !important;
+.mt-1px{
+  margin-top:1px  !important;
+}
+.mt-1-5px{
+  margin-top: 1.5px !important;
 }
 .mt-10px{
     margin-top: 0.625rem !important;
