--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -63,7 +63,7 @@ a{
     font-size: 24px;
   }
   .font-table-column{
-    font-family: 'Roboto';
+    font-family: 'Roboto-bold';
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
