--- a/src/assets/css/color-iconography.css
+++ b/src/assets/css/color-iconography.css
@@ -87,6 +87,9 @@
 .font-size-24px{
     font-size:var(--c-size-24px);
 }
+.font-size-20px{
+    font-size:var(--c-size-20px);
+}
 .font-size-12px{
     font-size:var(--c-size-12px);
 }
