--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -192,7 +192,9 @@
   .border-color-none{
     border-style: none !important;
   }
-  
+  .border-round-4px{
+    border-radius: 4px;
+  }
   /* border Colors */
 
 /* random */
