--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -12,6 +12,20 @@
     margin-right: var(--c-size-10px);
     margin-top: var(--c-size-10px);
     margin-bottom: var(--c-size-10px);
+    border-radius: 4px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+  }
+  .button-default-no-margin{
+    border-radius: var(--c-size-4px);
+    font-family: var(--c-font-styles-roboto);
+    font-size: var(--c-font-size-16px);
+    padding-left: var(--c-size-20px);
+    padding-right: var(--c-size-20px);
+    padding-top: var(--c-size-10px);
+    padding-bottom: var(--c-size-10px);
+    border-radius: 4px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -101,7 +115,7 @@
   }
   .badge-pill{
     border-radius: var(--bs-border-radius-pill);
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-size: var(--c-size-13px);
     font-weight: 700;
