--- a/src/assets/css/marginsnpaddings.css
+++ b/src/assets/css/marginsnpaddings.css
@@ -12,6 +12,9 @@
 .ms-12px{
   margin-left:var(--c-size-7px);
 }
+.ms-10px{
+  margin-left:var(--c-size-10px);
+}
 .ms-20px{
     margin-left: 1.25rem !important;
   }
@@ -29,6 +32,9 @@
 .me-8px{
   margin-right: var(--c-size-8px);
 }
+.me-10px{
+  margin-right:var(--c-size-10px);
+}
 .me-20px{
     margin-right: 1.25rem !important;
   }
@@ -37,6 +43,7 @@
 .mt-1px{
   margin-top:1px  !important;
 }
+
 .mt-1-5px{
   margin-top: 1.5px !important;
 }
@@ -69,6 +76,10 @@
 .mx-10{
     margin-left: var(--c-size-10px);
     margin-right: var(--c-size-10px);
+  }
+  .mx-20px{
+    margin-left: var(--c-size-20px);
+    margin-right: var(--c-size-20px);
   }
   .my-20{
     
@@ -132,10 +143,16 @@
 .pb-5px{
   padding-bottom: var(--c-size-5px) !important;
 }
+.pb-10px{
+  padding-bottom: var(--c-size-10px) !important;
+}
 .pb-22px{
   padding-bottom: var(--c-size-22px) !important;
 }
 
+.pb-20px{
+  padding-bottom: var(--c-size-20px) !important;
+}
 .ps-10px{
   padding-left: var(--c-size-10px);
 }
@@ -220,3 +237,7 @@ padding-bottom: 0px !important;
 }
 /* margin none  */
 /* custom-padding  */
+
+.vertical-alignment-center{
+  vertical-align: middle;
+}
