--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -45,13 +45,11 @@
     align-items: center;
 }
 .fontfamily-gotham-heading-3{
-    font-family: 'Gotham', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 18px;    
-    display: flex;
-    align-items: center;
+    font-family: 'Gotham', sans-serif !important;
+    font-style: normal !important;
+    font-weight: 700 !important;
+    font-size: 16px !important;
+    line-height: 18px !important;    
 }
 
 .font-gotham-body-16px{
