--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -36,6 +36,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Roboto-bold';
+  src: url(../assets/Fonts/Roboto/Roboto-Bold.ttf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'Gotham';
