--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -46,4 +46,5 @@
     background: #C6C7F9;
     color: var(--vt-c-white);
   }
+  .dropdown-menu{background:rgba(0,0,0,0.5); color:var(--vt-c-dark-gray); }
 /* dropdown */
